fix vertical spacing on video durations

--- a/src/ui/components/MediaCard/stylesheet.css
+++ b/src/ui/components/MediaCard/stylesheet.css
@@ -20,7 +20,7 @@
   background-color: #5b5b5b;
   right: 2rem;
   top: 36rem;
-  padding: 0.75rem 1rem;
+  padding: 0.75rem 1rem 0.5rem;
   border-radius: calc(var(--label) * var(--label-lh));
 }
 
